# programm

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/sort/: generating.c  generating.h  sort.c  sort.h  timeOfSort.c  timeOfSort.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: martrix.c  matrix.c  matrix.h  tasks.c  tasks.h  test_matrix.c  test_matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h  test_ordered_array_set.c  test_ordered_array_set.h
libs/data_structures/string_/: CMakeLists.txt  string_.c  string_.h  test_string_.c  test_string_.h
libs/data_structures/string_/tasks/: allLettersInString.c  allLettersInString.h  allWordsAreUnique.c  allWordsAreUnique.h  deleteWordsPalindroses.c  deleteWordsPalindroses.h  digitToEndRevers.c  digitToEndRevers.h  digitToStart.c  digitToStart.h  findWordPrecedingTheFirstOccurrence.c  findWordPrecedingTheFirstOccurrence.h  getCountPalindromWords.c  getCountPalindromWords.h  getStringWithMixWords.c  getStringWithMixWords.h  getWordsOtherThanLast.c  getWordsOtherThanLast.h  lastWordsOfTheStr1WhichIsInTheStr2.c  lastWordsOfTheStr1WhichIsInTheStr2.h  printWordBeforeFirstWordWithA.c  printWordBeforeFirstWordWithA.h  printWordsRevers.c  printWordsRevers.h  removeAdjacentEqualLetters.c  removeAdjacentEqualLetters.h  removeExtraSpaces.c  removeExtraSpaces.h  removeNonLetters.c  removeNonLetters.h  replace.c  replace.h  replaceNumbersWithSpaces.c  replaceNumbersWithSpaces.h  reversString.c  reversString.h  test_tasks_string.c  test_tasks_string.h  wordsOrdered.c  wordsOrdered.h
libs/data_structures/unordered_array_set/: test_unordered_array_set.c  test_unordered_array_set.h  unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: test_vector.c  test_vector.h  vector.c  vector.h  voidVector.c  voidVector.h
