add_library(string_
        string_.c
        tasks/removeNonLetters.c
        tasks/test_tasks_string.c
        tasks/removeAdjacentEqualLetters.c
        tasks/removeExtraSpaces.c
        tasks/digitToStart.c
        tasks/digitToEndRevers.c tasks/replaceNumbersWithSpaces.c tasks/getCountPalindromWords.c tasks/replace.c tasks/wordsOrdered.c tasks/wordsOrdered.h tasks/printWordsRevers.c tasks/printWordsRevers.h tasks/getStringWithMixWords.c tasks/getStringWithMixWords.h tasks/reversString.c tasks/reversString.h tasks/printWordBeforeFirstWordWithA.c tasks/printWordBeforeFirstWordWithA.h tasks/lastWordsOfTheStr1WhichIsInTheStr2.c tasks/lastWordsOfTheStr1WhichIsInTheStr2.h tasks/allWordsAreUnique.c tasks/allWordsAreUnique.h)